# project-structure-creator

./: .gitignore  INSTALLATION.md  LICENSE  Launch-GUI.bat  README.md  android_test.txt  build_exe.bat  build_exe.spec  build_nuitka_cli.bat  build_nuitka_gui.bat  cli_main.py  gui_main.py  input.py  nuitka_requirements.txt  pyproject.toml  requirements.txt  run_gui.bat  run_gui.py  setup.py  structure.txt  test_tree_structure.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
project_structure_creator/: __init__.py  gui.py  main.py
